# DCL_KW_Palm

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CMakeLists.txt~  KWConfig.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt~
src/Components/InitialFilterAkademik/: CMakeLists.txt  CMakeLists.txt~  KW_InitialFilterAkademik.cpp  KW_InitialFilterAkademik.hpp
src/Components/KW_InitialFilter_Movie/: CMakeLists.txt  KW_InitialFilter_Movie.cpp  KW_InitialFilter_Movie.hpp
src/Components/KW_MAP/: CMakeLists.txt  CMakeLists.txt~  KW_MAP.cpp  KW_MAP.hpp
src/Components/KW_Skin_Detection_TSL_Movie/: CMakeLists.txt  CMakeLists.txt~  KW_Skin_Detection_TSL_Movie.cpp  KW_Skin_Detection_TSL_Movie.hpp
src/Components/MAP2/: CMakeLists.txt~  KW_MAP2.cpp  KW_MAP2.hpp
src/Components/MAP2_Samples/: CMakeLists.txt  CMakeLists.txt~  KW_MAP2_Samples.cpp  KW_MAP2_Samples.hpp
src/Components/MAP3_InitialFilter/: CMakeLists.txt  CMakeLists.txt~  KW_MAP3_InitialFilter.cpp  KW_MAP3_InitialFilter.hpp
src/Components/MAP3_SkinDetection/: CMakeLists.txt  CMakeLists.txt~  KW_MAP3_SkinDetection.cpp  KW_MAP3_SkinDetection.hpp
src/Components/MAP_Estimation/: CMakeLists.txt  KW_MAP2.hpp  MAP_Estimation.cpp  MAP_Estimation.hpp
src/Types/: CMakeLists.txt
tasks/: AdjustSkinDetection.xml  AdjustSkinDetection_Sequence.xml  MAP2_Samples.xml  MAP2_Sequence.xml  MAP2_Test.xml  MAP3_AdjustSkinDetection.xml  MAP3_AdjustSkinDetection_Sequence.xml  MAP3_Samples.xml  MAP3_Sequence.xml  MAP3_Test.xml  MAP_Estimation.xml  MAP_P_R_Sequence.xml  MAP_Sequence.xml  MAP_Test.xml
(+12 files in other folders)
